--- a/style.css
+++ b/style.css
@@ -4,21 +4,21 @@ body {
   color: #333;
   font-family: lato, sans-serif;
 }
-.aaa {
+.header-container {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.header-container img {
   width: 100%;
 }
-.aaa .more_inf {
+.header-container .header-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.header-container { text-align: center;
 }
 }
 .centered-main-page-element {
@@ -26,7 +26,7 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task-input {
   width: 56%;
   display: inline-block;
   flex-grow: 1
@@ -118,12 +118,12 @@ li > label {
 li >      input[type="text"] {
   width: 226px
 }
-button.delete img {
+button.delete-button img {
   height: 2em;
   transform: rotatez(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.delete-button img:hover {
   transform: rotatez(0);
 }
 
@@ -138,11 +138,11 @@ ul li input[type=text] {
   display:none
 }
 
-ul li.editmode input[type=text] {
+ul li.edit-mode input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.editmode label {
+ul li.edit-mode label {
   display:none;
 }
