--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@
 }
 
 @media (max-width:768px) {
-.header-container { text-align: center;
+.header-container { 
+  text-align: center;
 }
 }
 .centered-main-page-element {
@@ -76,7 +77,7 @@ h3, .lable-add-item{
 }
 
 .input-text:focus {
-    color: #333;
+  color: #333;
 }
 
 /* new task */
@@ -98,20 +99,17 @@ h3, .lable-add-item{
   justify-content: space-between;
   align-items: center;
 }
-/* .list-item > * {
-  vertical-align: middle;
-} */
 
-.list-item > input[type="checkbox"] {
+.list-item.check-box {
   margin: 0 10px;
 }
-.list-item > label {
+.list-item > .checkbox-lable {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.list-item > input[type="text"] {
+.list-item > .input-text {
   width: 226px
 }
 .button.delete-button img {
@@ -124,21 +122,22 @@ h3, .lable-add-item{
 }
 
 /* completed */
-#completed-tasks-id label {
+#completed-tasks-id .checkbox-lable {
   text-decoration: line-through;
   color: #888;
 }
 
 /* edit task */
-ul li input[type=text] {
+
+.list-item .input-text {
   display:none
 }
 
-ul li.edit-mode input[type=text] {
+.list-item.edit-mode .input-text {
   display:inline-block;
-  width:224px
+  width:224px;
 }
 
-ul li.edit-mode label {
-  display:none;
+.list-item.edit-mode .checkbox-lable {
+  display: none;
 }
