--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ h3, .lable-add-item {
   width: 226px;
 }
 .list-item > .input-text {
-  width: 226px
+  width: 226px;
 }
 .button.delete-button img {
   height: 2em;
@@ -127,7 +127,7 @@ h3, .lable-add-item {
 /* edit task */
 
 .list-item .input-text {
-  display: none
+  display: none;
 }
 .list-item.edit-mode .input-text {
   display: inline-block;
